--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,12 @@ dependencies:
   provider: ^6.1.1
   shared_preferences: ^2.2.2
   intl: ^0.19.0
+  firebase_core: ^2.25.5
+  firebase_auth: ^4.17.6
+  google_sign_in: ^6.2.1
+  cloud_firestore: ^4.15.6
+  firebase_ui_auth: ^1.12.0
+  firebase_ui_oauth_google: ^1.2.0
 
 dev_dependencies:
   flutter_test:
